<resources>
    <string name="app_name">My Application</string>
    <string name="hello_my_friend">Hello my friend</string>
    <string name="meu_app">Meu App</string>
    <string name="testando">testando</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="pre_o">Preço</string>
    <string name="pre_o_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">Kms por litro</string>
    <string name="seu_gasto_total_ser_de">Seu gasto total será de:</string>
    <string name="r_0">R$ 0</string>
    <string name="calcular">Calcular</string>
</resources>