<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/distancia"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/distancia"
        android:inputType="number"
        android:autofillHints=""
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/total_de_quilometros"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/preco"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/pre_o"
        android:inputType="numberDecimal"
        android:autofillHints="" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/pre_o_por_litro"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/autonomia"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/autonomia"
        android:inputType="number"
        android:autofillHints=""
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/kms_por_litro"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52sp"
        android:fontFamily="sans-serif"
        android:text="@string/seu_gasto_total_ser_de"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/gastoTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26sp"
        android:fontFamily="sans-serif"
        android:text="@string/r_0"
        android:textAlignment="center"
        android:textColor="#078DCA"
        android:textSize="38sp" />

    <Button
        android:id="@+id/calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#03A193"
        android:padding="16dp"
        android:text="@string/calcular"
        android:textSize="18sp"
        />

</LinearLayout>